nodejs/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-demo
  labels:
    app: express-demo
spec:
  selector:
    matchLabels:
      app: express-demo
  template:
    metadata:
      labels:
        app: express-demo
    spec:
      containers:
        - name: express-demo
          image: registry.my-k8s-cluster.com/express-demo:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 200Mi
            requests:
              cpu: 250m
              memory: 100Mi
